- Implemented: MQTT-AD, handling single onoff colormode as a normal light/switch
- Implemented: MQTT-AD, power sensors for the Tuya SPM02
- Implemented: MQTT-AD, support sensors that report humidity but sends 'null' values
- Implemented: MQTT-AD, support for string field state objects
- Changed: dzVents, possible to pass a Domoticz device ID in notify() through the extra parameter
- Changed: Energy Dashboard now also available for non-admin users
- Changed: Energy Dashboard, Text object clipping rectangle
- Changed: Google Firebase Cloud Messaging (FCM) alternative way to pass a Domoticz device ID through the extra field ('|Device=<devidx>')
- Changed: Improved and automated login process for Netatmo devices (to obtain client ID and Password with user selectable scopes)
- Changed: Removed Highcharts 'Download PNG/JPG/SVG' buttons until export server is fixed
- Changed: Using OpenStreetMap for Latitude/Longitude query in settings
- Fixed: Custom Icons, making sure they are valid and loaded OK
- Fixed: Computed Meter summation
- Fixed: Floorplan, corrected open/close icon behaviour
- Fixed: Possible mutex lock issue when logging
- Fixed: Pushers, corrected Gas value rounding
- Fixed: Python framework, invalid sValue when creating a General/kWh sensor
- Fixed: RFXCom 868 MHz Weather device
- Fixed: RFXCom, WS90 Weather device
- Removed: Thermosmart thermostat (Product no longer supported/available by the manufacturer)
- Updated: Translations

Version 2024.7 (July 13th 2024)
- Implemented: P1 Meter, Report, Header now also supports simple mode (No T1/T2/R1/R2 but just total)
- Fixed: Google Cloud Messaging (GCM/FCM) possible crash when notification needed to be send

Version 2024.6 (July 8th 2024)
- Fixed: EventSystem, LOG_FORCE now always logged
- Changed: Google Cloud Messaging (GCM) now uses the new v1 API of Google's Firebase Cloud Messaging (FCM)

Version 2024.5 (July 7th 2024)
- Implemented: Currency Symbol in Location Settings