@@ -90,6 +90,10 @@
 				</select>
 			</td>
 		</tr>
+		<tr>
+			<td align="right" style="width:110px"><span data-i18n="Retained"></span>:</td>
+			<td><input type="checkbox" id="retained_mode"><label for="retained_mode"></td>
+		</tr>
 	</table>
 	<a class="btnstyle3" onclick="SaveConfiguration();" data-i18n="Save">Save</a>
 	</td>
